--- a/data_project1.ipynb
+++ b/data_project1.ipynb
@@ -12,21 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy\n",
     "import pandas as pd\n",
     "import pymongo\n",
     "import certifi\n",
-    "from datetime import datetime\n",
     "from sqlalchemy import create_engine, text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,23 +32,23 @@
     "host_name = \"localhost\"\n",
     "port = \"3306\"\n",
     "user_id = \"root\"\n",
-    "pwd = \"TBX3|L2e77i7\"\n",
+    "pwd = \"TBX3|L2e77i7\" # replace with your password\n",
     "\n",
     "dbname = \"world\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# mongo db auth\n",
     "mongodb_args = {\n",
-    "    \"user_name\" : \"cjq2cw\",\n",
-    "    \"password\" : \"Password123\",\n",
-    "    \"cluster_name\" : \"cluster0\",\n",
-    "    \"cluster_subnet\" : \"gtykg\",\n",
+    "    \"user_name\" : \"cjq2cw\", # replace with your usename\n",
+    "    \"password\" : \"Password123\", # replace with your password\n",
+    "    \"cluster_name\" : \"cluster0\", # replace with your cluster name\n",
+    "    \"cluster_subnet\" : \"gtykg\", # replace with your cluster subnet\n",
     "    \"cluster_location\" : \"atlas\", # \"local\"\n",
     "    \"db_name\" : \"sample_supplies\"\n",
     "}"
